# AOC23

day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
